<resources>
    <string name="app_name">Flashcards</string>
    <string name="login">Login</string>
    <string name="enter_your_email">Enter your e-mail</string>
    <string name="enter_e_mail_title">E-mail</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="auth_title">To work with our application please log in</string>
    <string name="register_text">Not registered yet? Create an account</string>
    <string name="confirm_password_title">Confirm password</string>
    <string name="enter_confirm_password">Confirm your password</string>
    <string name="enter_password_title">Enter your password</string>
    <string name="confirm_registration">Confirm registration</string>
    <string name="registration_title">Registration</string>
    <string name="name_surname_title">Name</string>
    <string name="enter_name_surname">Enter your Name</string>
    <string name="empty_field_error">This field must be filled</string>
    <string name="password_missmatch">Password mismatch</string>
    <string name="profile_menu_item">Profile</string>
    <string name="friends_menu_item">Friends</string>
    <string name="user_groups_menu_item">User groups</string>
    <string name="user_communities_menu_item">User communities</string>
    <string name="history_menu_item">History</string>
    <string name="callback_menu_item">Callback</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_page_menu_item">Main page</string>
    <string name="image_button_add_new_group">Add new group</string>
    <string name="image_button_add_friend">Add friend</string>
    <string name="image_button_add_new_community">Add new community</string>
    <string name="title_activity_main_demo">MainActivity_demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="author_title">Author:</string>
    <string name="community_subscribers_title">Subscribers:</string>
    <string name="group_date">Last visit:</string>
    <string name="group_name_title">Group name:</string>
    <string name="group_tags_title">Tags:</string>
    <string name="group_my_answer_title">My answer</string>
    <string name="group_result_title">Result:</string>
    <string name="add_group_select_an_action_title">Select an action:</string>
    <string name="create_new_group_button">Create new group</string>
    <string name="find_a_group_button">Find a group</string>
    <string name="add_question_title">Add question</string>
    <string name="submit_new_group_button_title">Submit new group</string>
    <string name="enter_group_name">Enter group name:</string>
    <string name="find_group">Find group</string>
    <string name="add_new_question">Add new question</string>
    <string name="add_new_card_title">Add new card</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="edit_qa">Edit QA</string>
    <string name="delete">Delete</string>
    <string name="add_group">Add group</string>
    <string name="edit_qa_item">Edit qa item</string>
    <string name="submit_answer">Submit answer</string>
    <string name="your_answer">Your answer:</string>
    <string name="next_question">Next question</string>
    <string name="response_time">Answer time:</string>
    <string name="submit_callback">Submit callback</string>
    <string name="describe_your_problem_in_detail">Describe your problem in detail</string>
    <string name="friend_name">Friend name:</string>
    <string name="enter_friend_s_e_mail">Enter friend\'s e-mail:</string>
    <string name="add_friend">Add friend</string>
    <string name="name">Name:</string>
    <string name="e_mail">E-mail:</string>
    <string name="status">Status:</string>
    <string name="level">Level:</string>
    <string name="you_are_not_subscribed_to_any_group">You are not subscribed to any group</string>
    <string name="you_can_find_or_create_a_group_on_the_group_page">You can find or create a group on the group page</string>
    <string name="max_points">Max points:</string>
    <string name="last_visit">Last visit:</string>
    <string name="tags">Tags</string>
    <string name="main_image">Main image</string>
</resources>